fixed sub menu on safari

--- a/css/navigation-styles.css
+++ b/css/navigation-styles.css
@@ -34,9 +34,7 @@ a:hover, a:active {
 	/*Fixed nav stuff*/
 	top: 0;
 	position: fixed;
-	overflow: hidden;
 	text-align:center;
-	height:auto;
 	z-index: 101;
 	color: white;
 	width: 100%
